--- a/local/templates/main/template_styles.css
+++ b/local/templates/main/template_styles.css
@@ -503,7 +503,7 @@ a.button, a.button-white {
   left: 0;
   right: 0;
   bottom: 0;
-  overflow: scroll;
+  overflow: auto;
   background-color: rgba(255, 255, 255, 0.8); }
   .popup.is-active {
     display: block; }
