--- a/local/templates/main/template_styles.css
+++ b/local/templates/main/template_styles.css
@@ -179,7 +179,7 @@ header {
     position: absolute;
     top: 100%;
     left: 550px;
-    margin-top: 113px;
+    margin-top: 116px;
     margin-left: -1px;
     width: 12px;
     height: 19px;
@@ -192,7 +192,7 @@ header {
     top: 100%;
     left: 550px;
     right: -9999px;
-    margin-top: 120px;
+    margin-top: 123px;
     height: 1px;
     background-color: #252525; }
   .page-header__img {
@@ -203,17 +203,17 @@ header {
        object-fit: cover; }
   .page-header__title {
     position: absolute;
-    bottom: 223px;
+    top: 184px;
     left: 430px;
-    padding: 29px 56px 20px 56px;
+    padding: 24px 56px 23px 56px;
     background-color: rgba(255, 255, 255, 0.5);
     font-size: 60px;
     line-height: 1; }
   .page-header__text {
     position: absolute;
-    top: 308px;
+    top: 315px;
     left: 608px;
-    width: 502px;
+    width: 500px;
     color: #878787;
     font-size: 27px;
     line-height: 1.33;
@@ -222,7 +222,7 @@ header {
 
 .page-content {
   padding-top: 67px;
-  width: 940px; }
+  }
   .page-content__article {
     position: relative;
     margin-bottom: 67px;
@@ -232,7 +232,6 @@ header {
       font-size: 24px;
       color: #252525; }
     .page-content__article p {
-      max-width: 540px;
       margin-bottom: 30px;
       line-height: 2;
       color: #878787; }
