--- a/local/templates/main/template_styles.css
+++ b/local/templates/main/template_styles.css
@@ -174,6 +174,7 @@ header {
   position: relative;
   height: 516px;
   margin-bottom: 132px; }
+  /*
   .page-header::before {
     content: '';
     position: absolute;
@@ -195,6 +196,7 @@ header {
     margin-top: 123px;
     height: 1px;
     background-color: #252525; }
+    */
   .page-header__img {
     display: block;
     width: 550px;
@@ -2092,5 +2094,58 @@ h1 {
     color: #b36457;
     line-height: 20px;
     margin-bottom: 15px;
+}
+
+.cross.cross-left {
+    width: 100%;
+    position: absolute;
+    right: 0;
+}
+
+.cross.cross-left .cross-image {
+    content: '';
+    top: 100%;
+    float: left;
+    left: 0px;
+    margin-left: 1px;
+    width: 12px;
+    height: 19px;
+    background: -webkit-linear-gradient(top, transparent 32%, #252525 32%, #252525 47%, transparent 47%), -webkit-linear-gradient(left, transparent 42%, #252525 42%, #252525 58%, transparent 58%);
+    background: linear-gradient(to bottom, transparent 32%, #252525 32%, #252525 47%, transparent 47%), linear-gradient(to right, transparent 42%, #252525 42%, #252525 58%, transparent 58%);
+}
+
+.cross.cross-left  .cross-line {
+    background-color: #000000;
+    float: left;
+    margin: 7px 0 7px 0;
+    height: 1px;
+    width: 1px;
+}
+
+
+.cross.cross-right {
+    width: 100%;
+    position: absolute;
+    right: 0;
+}
+
+.cross.cross-right .cross-image {
+    content: '';
+    top: 100%;
+    float: right;
+    right: 0px;
+    margin-left: -1px;
+    width: 12px;
+    height: 19px;
+    background: -webkit-linear-gradient(top, transparent 32%, #252525 32%, #252525 47%, transparent 47%), -webkit-linear-gradient(left, transparent 42%, #252525 42%, #252525 58%, transparent 58%);
+    background: linear-gradient(to bottom, transparent 32%, #252525 32%, #252525 47%, transparent 47%), linear-gradient(to right, transparent 42%, #252525 42%, #252525 58%, transparent 58%);
+}
+
+.cross.cross-right  .cross-line {
+    background-color: #000000;
+    float: right;
+    margin: 7px 0 7px 0;
+    height: 1px;
+    width: 1px;
 }
 
