--- a/local/templates/main/css/template.css
+++ b/local/templates/main/css/template.css
@@ -43,9 +43,9 @@
   }
 }
 @media (min-width: 1360px) {
-  .container {
+ /* .container {
     width: 1310px;
-  }
+  }*/
 }
 .container-fluid {
   margin-right: auto;
@@ -69,10 +69,10 @@
 .container-fluid:after {
   clear: both;
 }
-.row {
+/*.row {
   margin-left: -15px;
   margin-right: -15px;
-}
+}*/
 .row:before,
 .row:after {
   content: '';
@@ -1128,16 +1128,16 @@ body {
   }
 }
 .container {
-  padding-right: 30px;
-  padding-left: 30px;
+ /* padding-right: 30px;
+  padding-left: 30px;*/
   margin-right: auto;
   margin-left: auto;
 }
 @media screen and (min-width: 992px) {
-  .container {
+ /* .container {
     padding-right: 60px;
     padding-left: 60px;
-  }
+  }*/
 }
 .mobileNav {
   position: absolute;
@@ -1482,7 +1482,7 @@ main {
 }
 @media screen and (min-width: 768px) {
   main {
-    padding: 54px 0 240px;
+    padding: 54px 0 260px;
   }
 }
 h2 {
@@ -1646,5 +1646,30 @@ h2 {
   top: 86%;
   margin-top: -30px;
   background: url(../images/call-back.png);
+}
+
+.siteHeader .headerCenter {
+	margin-left: 37px;
+	
+}
+
+.main1 {
+	padding-left: 0;
+    padding-right: 0;
+}
+
+@media screen and (max-width: 768px) {
+	
+	.callback-trigger {
+	  display: block;
+	  width: 10px;
+	  height: 10px;
+	  position: fixed;
+	  right: 5%;
+	  top: 95%;
+	  margin-top: -30px;
+	  background: url(../images/call-back-small.png);
+	}
+	
 }
 /*# sourceMappingURL=template.css.map */
