--- a/local/templates/main/css/template.css
+++ b/local/templates/main/css/template.css
@@ -3583,4 +3583,18 @@ body {
         position: absolute;
         height: 600px;
     }
+    
+    .item{
+        background: #333;    
+        text-align: center;
+        height: 300px !important;
+    }
+    .carousel{
+        margin-top: 20px;
+    }
+    
+    .sliderText {
+        width: 636px;
+        height: 516pxpx;
+    }
 }
