--- a/local/templates/main/css/template.css
+++ b/local/templates/main/css/template.css
@@ -2034,6 +2034,21 @@ body {
         position: absolute;
         height: 600px;
     }
+    .carousel{
+        height: 310px;
+    }
+    .carousel-inner > .item > img, .carousel-inner > .item > a > img {
+        line-height: 1;
+        width: 473px;
+        height: 310px;
+    }
+    .carousel-inner  {
+        position: relative;
+    }
+    
+    .carousel_content1 {
+        position: relative;
+    }
 }
 @media (min-width: 992px) {
     .visible-md {
@@ -2628,6 +2643,22 @@ body {
         position: absolute;
         height: 600px;
     }
+    .carousel{
+        height: 400px;
+    }
+    .carousel-inner > .item > img, .carousel-inner > .item > a > img {
+        line-height: 1;
+        width: 612px;
+        height: 400px;
+    }
+    
+    .carousel-inner  {
+        position: relative;
+    }
+    
+    .carousel_content1 {
+        position: relative;
+    }
 }
 @media (min-width: 1200px) {
     .menu {
@@ -3202,6 +3233,22 @@ body {
         position: absolute;
         height: 600px;
     }
+    .carousel{
+        height: 516px;
+    }
+    .carousel-inner > .item > img, .carousel-inner > .item > a > img {
+        line-height: 1;
+        width: 790px;
+        height: 516px;
+    }
+    
+    .carousel-inner  {
+        position: relative;
+    }
+    
+    .carousel_content1 {
+        position: relative;
+    }
 }
 @media (min-width: 1340px) {
     .container {
@@ -3583,18 +3630,77 @@ body {
         position: absolute;
         height: 600px;
     }
-    
-    .item{
-        background: #333;    
-        text-align: center;
-        height: 300px !important;
-    }
     .carousel{
-        margin-top: 20px;
+        height: 516px;
     }
     
-    .sliderText {
-        width: 636px;
-        height: 516pxpx;
+    .carousel-inner > .item > img, .carousel-inner > .item > a > img {
+        line-height: 1;
+        width: 790px;
+        height: 516px;
+        position: absolute;
+        right: 0;
     }
+    
+    .carousel-inner  {
+        position: relative;
+    }
+    
+    
+    .carousel_content1 {
+        position: relative;
+        height: 516px;
+        z-index: 100;
+        width: 635px;
+        top: 105px;   
+    }
+    .carousel_content1 h3 {
+        font-family: DINPro;
+        font-size: 60px;
+        font-weight: bold;
+        font-style: normal;
+        font-stretch: normal;
+        line-height: 1;
+        color: #252525; 
+    }
+    
+    .carousel_content1 p {
+        width: 400px;
+        font-family: GothamPro;
+        font-size: 21px;
+        font-weight: 300;
+        font-style: normal;
+        font-stretch: normal;
+        line-height: 1.62;
+        color: #878787;
+        margin-top: 105px;
+    }
+    
+    .carousel_background1 {
+        width: 100%;
+        height: 456px;
+        opacity: 0.5;
+        background-color: #ffffff;
+        position: absolute;
+        bottom: 0;
+        z-index:10;
+    }
+    
+    .hei8 {
+        height: 516px;
+    }
+    
+   .indicators_carousel1 {
+       
+   }
+   
+   .indicators_carousel1 ol {
+       top: 54px;
+       left: 75px;
+   }
+   
+    
+    
+    
+    
 }
