--- a/local/templates/main/template_styles.css
+++ b/local/templates/main/template_styles.css
@@ -6220,9 +6220,10 @@ button.close {
   position: relative;
 }
 .carousel-inner {
-  position: relative;
-  overflow: hidden;
-  width: 100%;
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
 }
 .carousel-inner > .item {
   display: none;
@@ -6386,7 +6387,7 @@ button.close {
   margin: 1px;
   text-indent: -999px;
   border: 1px solid #ffffff;
-  border-radius: 10px;
+  /*border-radius: 10px;*/
   cursor: pointer;
   background-color: #000 \9;
   background-color: rgba(0, 0, 0, 0);
@@ -6395,9 +6396,9 @@ button.close {
   margin: 0;
   width: 12px;
   height: 12px;
-  background-color: #ffffff;
+  background-color: #64b357;
 }
-.carousel-caption {
+/*.carousel-caption {
   position: absolute;
   left: 15%;
   right: 15%;
@@ -6408,7 +6409,7 @@ button.close {
   color: #ffffff;
   text-align: center;
   text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
-}
+}*/
 .carousel-caption .btn {
   text-shadow: none;
 }
