--- a/local/templates/main/css/template.css
+++ b/local/templates/main/css/template.css
@@ -3699,6 +3699,15 @@ body {
        left: 75px;
    }
    
+   .container1 {
+       width: 1280px;
+       margin-right: auto;
+       margin-left: auto;
+       padding-left: 15px;
+       padding-right: 15px;
+       position:absolute;
+   }
+   
     
     
     
