--- a/local/templates/main/template_styles.css
+++ b/local/templates/main/template_styles.css
@@ -6370,15 +6370,15 @@ button.close {
   content: '\203a';
 }
 .carousel-indicators {
-  position: absolute;
-  bottom: 10px;
-  left: 50%;
-  z-index: 15;
-  width: 60%;
-  margin-left: -30%;
-  padding-left: 0;
-  list-style: none;
-  text-align: center;
+      position: absolute;
+    padding-top: 54px;
+    /* left: 50%; */
+    /* z-index: 15; */
+    width: 50%;
+    margin-left: 4px;
+    /* padding-left: 0; */
+    list-style: none;
+    /* text-align: center; */
 }
 .carousel-indicators li {
   display: inline-block;
