--- a/local/templates/main/css/template.css
+++ b/local/templates/main/css/template.css
@@ -2041,6 +2041,8 @@ body {
         line-height: 1;
         width: 473px;
         height: 310px;
+        position: absolute;
+        right: 0;
     }
     .carousel-inner  {
         position: relative;
@@ -2048,7 +2050,71 @@ body {
     
     .carousel_content1 {
         position: relative;
+        height: 516px;
+        z-index: 100;
+        width: 635px;
+        top: 105px;   
     }
+    .carousel_content1 h3 {
+        font-family: DINPro;
+        font-size: 36px;
+        font-weight: bold;
+        font-style: normal;
+        font-stretch: normal;
+        line-height: 1;
+        color: #252525; 
+    }
+    
+    .carousel_content1 p {
+        width: 400px;
+        font-family: GothamPro;
+        font-size: 12.6px;
+        font-weight: 300;
+        font-style: normal;
+        font-stretch: normal;
+        line-height: 1.62;
+        color: #878787;
+        margin-top: 105px;
+    }
+    
+    .carousel_background1 {
+        width: 100%;
+        height: 456px;
+        opacity: 0.5;
+        background-color: #ffffff;
+        position: absolute;
+        bottom: 0;
+        z-index:10;
+    }
+    
+    .hei8 {
+        height: 516px;
+    }
+    
+   .indicators_carousel1 {
+       
+   }
+   
+   .indicators_carousel1 ol {
+       top: 54px;
+       left: 75px;
+   }
+   
+   .container1 {
+       width: 767px;
+        /* height: 66px; */
+        margin-right: auto;
+        margin-left: auto;
+        padding-left: 15px;
+        padding-right: 15px;
+        z-index: 120;
+   }
+   
+   .container1 li {
+       margin-right: 10px;
+   }
+    
+ 
 }
 @media (min-width: 992px) {
     .visible-md {
@@ -2650,6 +2716,8 @@ body {
         line-height: 1;
         width: 612px;
         height: 400px;
+        position: absolute;
+        right: 0;
     }
     
     .carousel-inner  {
@@ -2658,7 +2726,69 @@ body {
     
     .carousel_content1 {
         position: relative;
+        height: 516px;
+        z-index: 100;
+        width: 635px;
+        top: 105px;   
     }
+    .carousel_content1 h3 {
+        font-family: DINPro;
+        font-size: 46.5px;
+        font-weight: bold;
+        font-style: normal;
+        font-stretch: normal;
+        line-height: 1;
+        color: #252525; 
+    }
+    
+    .carousel_content1 p {
+        width: 400px;
+        font-family: GothamPro;
+        font-size: 16.3px;
+        font-weight: 300;
+        font-style: normal;
+        font-stretch: normal;
+        line-height: 1.62;
+        color: #878787;
+        margin-top: 105px;
+    }
+    
+    .carousel_background1 {
+        width: 100%;
+        height: 456px;
+        opacity: 0.5;
+        background-color: #ffffff;
+        position: absolute;
+        bottom: 0;
+        z-index:10;
+    }
+    
+    .hei8 {
+        height: 516px;
+    }
+    
+   .indicators_carousel1 {
+       
+   }
+   
+   .indicators_carousel1 ol {
+       top: 54px;
+       left: 75px;
+   }
+   
+   .container1 {
+       width: 970px;
+        /* height: 66px; */
+        margin-right: auto;
+        margin-left: auto;
+        padding-left: 15px;
+        padding-right: 15px;
+        z-index: 120;
+   }
+   
+   .container1 li {
+       margin-right: 10px;
+   }
 }
 @media (min-width: 1200px) {
     .menu {
@@ -3240,6 +3370,8 @@ body {
         line-height: 1;
         width: 790px;
         height: 516px;
+        position: absolute;
+        right: 0;
     }
     
     .carousel-inner  {
@@ -3248,7 +3380,69 @@ body {
     
     .carousel_content1 {
         position: relative;
+        height: 516px;
+        z-index: 100;
+        width: 635px;
+        top: 105px;   
     }
+    .carousel_content1 h3 {
+        font-family: DINPro;
+        font-size: 60px;
+        font-weight: bold;
+        font-style: normal;
+        font-stretch: normal;
+        line-height: 1;
+        color: #252525; 
+    }
+    
+    .carousel_content1 p {
+        width: 400px;
+        font-family: GothamPro;
+        font-size: 21px;
+        font-weight: 300;
+        font-style: normal;
+        font-stretch: normal;
+        line-height: 1.62;
+        color: #878787;
+        margin-top: 105px;
+    }
+    
+    .carousel_background1 {
+        width: 100%;
+        height: 456px;
+        opacity: 0.5;
+        background-color: #ffffff;
+        position: absolute;
+        bottom: 0;
+        z-index:10;
+    }
+    
+    .hei8 {
+        height: 516px;
+    }
+    
+   .indicators_carousel1 {
+       
+   }
+   
+   .indicators_carousel1 ol {
+       top: 54px;
+       left: 75px;
+   }
+   
+   .container1 {
+       width: 1170px;
+        /* height: 66px; */
+        margin-right: auto;
+        margin-left: auto;
+        padding-left: 15px;
+        padding-right: 15px;
+        z-index: 120;
+   }
+   
+   .container1 li {
+       margin-right: 10px;
+   }
 }
 @media (min-width: 1340px) {
     .container {
@@ -3712,8 +3906,5 @@ body {
    .container1 li {
        margin-right: 10px;
    }
-    
-    
-    
     
 }
